#******************************************************************************
# (C) 2018, Stefan Korner, Austria                                            *
#                                                                             *
# The Space Rust Library is free software; you can redistribute it and/or     *
# modify it under the terms of the MIT License as published by the            *
# Massachusetts Institute of Technology.                                      *
#                                                                             *
# The Space Rust Library is distributed in the hope that it will be useful,   *
# but WITHOUT ANY WARRANTY; without even the implied warranty of              *
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the MIT License    *
# for more details.                                                           *
#******************************************************************************
# Project manifest                                                            *
#******************************************************************************

[package]
name = "space_rust_library"
version = "0.1.0"
authors = ["Stefan Korner <korner-hajek@gmx.at>"]

[dependencies]
lazy_static = "1.1.0"
time = "0.1"
